--- a/clusterpost/bigchaindb/docs/server/requirements.txt
+++ b/clusterpost/bigchaindb/docs/server/requirements.txt
@@ -7,3 +7,5 @@ pyyaml==6.0
 aafigure==0.6
 packaging==23.0
 pygments==2.14.0 # not directly required, pinned by Snyk to avoid a vulnerability
+certifi>=2022.12.7 # not directly required, pinned by Snyk to avoid a vulnerability
+setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
