--- a/clusterpost/bigchaindb/docs/root/requirements.txt
+++ b/clusterpost/bigchaindb/docs/root/requirements.txt
@@ -5,3 +5,4 @@ sphinxcontrib-napoleon==0.7
 sphinxcontrib-httpdomain==1.8.1
 packaging==23.0
 pygments==2.14.0 # not directly required, pinned by Snyk to avoid a vulnerability
+setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
