--- a/clusterpost/bigchaindb/docs/contributing/requirements.txt
+++ b/clusterpost/bigchaindb/docs/contributing/requirements.txt
@@ -4,3 +4,4 @@ sphinx-rtd-theme==1.2.0
 wget
 packaging==23.0
 pygments==2.14.0 # not directly required, pinned by Snyk to avoid a vulnerability
+setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
