fix: packages/p2lara/package.json, packages/p2lara/package-lock.json & packages/p2lara/.snyk to reduce vulnerabilities
The following vulnerabilities are fixed with a Snyk patch:
- https://snyk.io/vuln/SNYK-JS-LODASH-450202

--- a/packages/p2lara/package.json
+++ b/packages/p2lara/package.json
@@ -14,7 +14,7 @@
     "start": "npm run dev",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "snyk-protect": "snyk protect",
+    "snyk-protect": "snyk-protect",
     "prepare": "npm run snyk-protect"
   },
   "keywords": [
@@ -37,7 +37,7 @@
     "mosca": "^2.8.3",
     "mqtt": "^5.0.0",
     "ttn": "^2.3.2",
-    "snyk": "^1.1064.0"
+    "@snyk/protect": "latest"
   },
   "devDependencies": {
     "@types/expect": "24.3.0",
