--- a/clusterpost/bigchaindb/docs/server/requirements.txt
+++ b/clusterpost/bigchaindb/docs/server/requirements.txt
@@ -7,5 +7,6 @@ pyyaml==6.0.1
 aafigure==0.6
 packaging==23.2
 pygments==2.17.2 # not directly required, pinned by Snyk to avoid a vulnerability
-certifi>=2022.12.7 # not directly required, pinned by Snyk to avoid a vulnerability
+certifi>=2023.7.22 # not directly required, pinned by Snyk to avoid a vulnerability
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
+requests>=2.31.0 # not directly required, pinned by Snyk to avoid a vulnerability
