--- a/clusterpost/bigchaindb/docs/server/requirements.txt
+++ b/clusterpost/bigchaindb/docs/server/requirements.txt
@@ -10,3 +10,4 @@ pygments==2.17.2 # not directly required, pinned by Snyk to avoid a vulnerabilit
 certifi>=2023.7.22 # not directly required, pinned by Snyk to avoid a vulnerability
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
 requests>=2.32.0 # not directly required, pinned by Snyk to avoid a vulnerability
+urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
