--- a/clusterpost/bigchaindb/docs/contributing/requirements.txt
+++ b/clusterpost/bigchaindb/docs/contributing/requirements.txt
@@ -6,3 +6,4 @@ packaging==23.2
 pygments==2.17.2 # not directly required, pinned by Snyk to avoid a vulnerability
 setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerability
 requests>=2.32.0 # not directly required, pinned by Snyk to avoid a vulnerability
+zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
